# async-http-downloader

./: .gitmodules  CMakeLists.txt  README.md
include/: HTTPRequest.hpp
include/ahd/: Action.hpp  ConfigReader.hpp  DownloadAction.hpp  FileTask.hpp  FileTaskRunner.hpp  Task.hpp  TaskRunner.hpp  UnpackAction.hpp  YamlConfigReader.hpp
server/: .editorconfig  .gitignore  Makefile  config.yaml  main.py  requirements-dev.txt  requirements.txt
server/data/: file.txt
src/: DownloadAction.cpp  TaskRunner.cpp  UnpackAction.cpp  YamlConfigReader.cpp  main.cpp
